# react-python

./: README.md
client/: .eslintrc.js  .gitignore  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
client/src/api/: index.ts  layout.ts  login.ts  movie.ts  test_python.ts
client/src/component/layout/common/: Footer.tsx  Header.tsx  Loading.tsx  Sidebar.tsx  index.ts
client/src/component/theme/: DefaultTheme.tsx
client/src/component/widget/: Widget.tsx
client/src/hook/: index.ts  useJotaiAtom.ts  useJotaiAtomWithAsync.ts  useJotaiMutation.ts  useJotaiUpdateAtom.ts
client/src/pages/about/: TestPage.tsx
client/src/pages/error/: ErrorPage.tsx
client/src/pages/home/: MainPage.tsx
client/src/pages/login/: LoginPage.tsx
client/src/route/: CustomRoutes.tsx
client/src/store/: index.ts  layout.ts  movie.ts
client/src/util/: axios-util.ts  comm-util.ts
client/typings/: layout.d.ts
server/: .env  .gitignore  pyproject.toml
server/app/: exceptions.py  root.py
server/app/api/: code.py  login.py  router.py  test.py  user.py
server/app/config/: database.py
server/app/core/: __init__.py  config.py  database.py  sqlalchemy_middleware.py  transactional.py
server/app/model/: code.py  user.py
server/app/models/: code.py  grid.py  user.py
server/app/schema/: code.py  login.py
server/app/services/: user.py
server/app/util/: auth_handler.py  excape.py  text.py
server/app/utils/: auth_bearer.py  auth_handler.py  grid_utils.py  types.py
